<resources>
    <string name="app_name">Wordpress Gyms Circle</string>
    <string name="app_logo">Gyms Circle</string>


    <!--    Navigation Menu-->
    <string name="profile">Profile</string>
    <string name="menu_slogan" />
    <string name="post">Posts</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="category">Categories</string>
    <string name="share">Share</string>
    <string name="restaurant">Restaurant</string>
    <string name="bank">Bank</string>
    <string name="shop">Shop</string>
    <string name="education">Education</string>
    <string name="rate_us">Rate US</string>
    <string name="contact_us">Contact US</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--    Ml Kit-->
    <string name="translated_text_hint">Translated text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating&#8230;</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="source_text_hint">Source text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>