<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/app_logo" />
        <item
            android:id="@+id/nav_posts"
            android:title="@string/post" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />
    </group>

    <item android:title="@string/profile">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
            </group>

        </menu>

    </item>

    <item android:title="@string/category">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_restaurant"
                    android:title="@string/restaurant" />
                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/bank" />
                <item
                    android:id="@+id/nav_shop"
                    android:title="@string/shop" />
                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education" />
            </group>

        </menu>

    </item>

    <item android:title="@string/share">
        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us" />
            </group>

        </menu>

    </item>

</menu>