<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/white"
    android:paddingStart="15dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/menu_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/menu_slogan" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/menu_slogan"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/bungee"
        android:text="@string/app_logo"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_above="@id/app_name"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/company_logo" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/yoga_icn" />

</RelativeLayout>